<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sample.sean.backend_testapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:layout_centerHorizontal="true"
        android:id="@+id/hello_world" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tapme"
        android:id="@+id/button"
        android:onClick="onButtonTap"
        android:layout_below="@+id/hello_world"
        android:layout_alignRight="@+id/txv_showentries"
        android:layout_alignEnd="@+id/txv_showentries" />

    <TextView
        android:maxLines = "10"
        android:scrollbars = "vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Click SHOW ENTRIES"
        android:id="@+id/txv_showentries"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="121dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="100dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edv_addentry"
        android:layout_above="@+id/button3"
        android:layout_toLeftOf="@+id/hello_world"
        android:layout_toStartOf="@+id/hello_world" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_entry"
        android:id="@+id/button2"
        android:nestedScrollingEnabled="true"
        android:onClick="onButtonPost"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edv_delentry"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignLeft="@+id/edv_addentry"
        android:layout_alignStart="@+id/edv_addentry" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_entry"
        android:id="@+id/button3"
        android:onClick="onButtonDelete"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_label"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/button2"
        android:layout_toLeftOf="@+id/edv_addentry"
        android:layout_toStartOf="@+id/edv_addentry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_label"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/edv_delentry"
        android:layout_toLeftOf="@+id/edv_delentry"
        android:layout_toStartOf="@+id/edv_delentry" />

</RelativeLayout>
